@@ -3,6 +3,8 @@ Version 3.3.6 (2010-05-xx)
 	Fixed bug where Gecko would produce an error if you unformatted text inside an empty element.
 	Fixed bug where IE would produce an error if the caret was placed before a table and you used the align buttons.
 	Fixed bug where the font size drop down didn't display the a preview correctly.
+	Fixed bug where the paste plugin wouldn't include all contents some times on WebKit browsers.
+	Fixed bug where the plain text mode toggle wouldn't work properly on WebKit.
 Version 3.3.5.1 (2010-05-07)
 	Fixed a critical bug with the fullscreen plugin. Produced error messages when the state was toggled on/off.
 Version 3.3.5 (2010-05-06)
